src/pages/Learn/Learn.module.scss
@use 'src/styles/layout-variables';
@use 'src/styles/flat-design-colors';
@import 'src/styles/flat-design-forms';


.wrapper {
  @extend .container;
  min-height: 50vh;

  .form {
    @extend .form;
    width: 600px;
    p{
      word-break: break-word;

    }

    img {
      height: auto;
      max-width: 300px;
    }

    .radios {
      max-height: 100px;
      display: flex;
      flex-direction: column;
      gap: 15px;
      flex-wrap: wrap;
      margin-top: 15px;
      margin-bottom: 15px;
    }
  }

}

